fix(posts): scrollbar

--- a/styles/main.css
+++ b/styles/main.css
@@ -10,4 +10,22 @@
 
 .main__posts {
     width: 75%;
+    height: 400px;
+    overflow: hidden;
+    overflow-y: scroll;
+    padding-right: 144px;
 }
+
+.main__posts::-webkit-scrollbar {
+    width: 15px;
+}
+
+.main__posts::-webkit-scrollbar-track {
+    background: #D9D9D9;
+}
+
+.main__posts::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background: #797979;
+}
+
